--- a/style.css
+++ b/style.css
@@ -20,3 +20,17 @@ a:link {
 	text-decoration: none;
 }
 
+
+.insideWrapper{ 
+	width:100%; height:100%; 
+	position:relative;
+}
+
+.coveredImage{ 
+	width:100%; height:100%; 
+	position:absolute; top:0px; left:0px;
+}
+.coveringCanvas{ 
+	width:100%; height:100%; 
+	position:absolute; top:0px; left:0px;
+}
